--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div>
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-<app-window></app-window>
+  <h1>{{ title }}</h1>
+  <button (click)="onRecreate()">New Game</button>
+  <app-window *ngFor="let r of reset"></app-window>
 </div>
