--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,1 +1,1 @@
-<input id="{{x}},{{y}}" value="" type="button" [ngStyle]="{'background': 'url(' + bgImg + ')'}" (contextmenu)="onRightClick($event,x,y)" (click)="onClick($event,x,y)">
+<input id="{{x}},{{y}}" value="" type="button" [ngStyle]="{'background': 'url(' + bgImg + ')'}" (contextmenu)="onRightClick($event)" (click)="onClick($event,x,y)">
