--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
   <h1>{{ title }}</h1>
-  <button (click)="onRecreate()">New Game</button>
+  <button (click)="newGame()">New Game</button>
   <app-window *ngFor="let r of reset"></app-window>
 </div>
