--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,8 +1,8 @@
 <div>
   <table align="center" border="1">
-    <tr *ngFor="let i of [0,1,2,3,4,5,6,7]">
-      <td *ngFor="let j of [0,1,2,3,4,5,6,7]">
-        <app-button [bomb]="placeBomb(i,j)" [(shownButtons)]="shownButtons" [cellArray]="cellArray" [bombsArray]="bombsArray" [x]="i" [y]="j"></app-button>
+    <tr *ngFor="let i of width">
+      <td *ngFor="let j of height">
+        <app-button [width]="width.length" [height]="height.length" [bomb]="placeBomb(i,j)" [(shownButtons)]="shownButtons" [cellArray]="cellArray" [bombsArray]="bombsArray" [x]="i" [y]="j"></app-button>
       </td>
     </tr>
   </table>
