Commit before service implementation.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div>
+<div style="text-align: center">
   <h1>{{ title }}</h1>
   <button (click)="newGame()">New Game</button>
+<!--  <button (click)="saveGame()">Save Game</button>-->
   <app-window *ngFor="let r of reset"></app-window>
 </div>
